<resources>
    <string name="app_name">Smubu</string>

    <!--font name-->
    <string name="SFUI_Display_SemiBold">SFUIDisplay-Semibold.ttf</string>
    <string name="SFUI_Text_SemiBold">sf-san-francisco-ui-text-semibold.ttf</string>
    <string name="SFUI_Text_Regular">SFUIText-Regular.ttf</string>
    <string name="SFUI_Display_Regular">SFUIDisplay-Regular.ttf</string>
    <string name="SFUI_Text_Medium">SanFranciscoText-Medium.ttf</string>
    <string name="SFUI_Display_Medium">SFUIDisplay-Medium.ttf</string>
    <string name="SFUI_UI_LIGHT">sf-san-francisco-ui-text-light.ttf</string>
    <string name="SFUI_DISPLAY_LIGHT">sf-san-francisco-ui-display-light-595a1f9325ce3.ttf</string>
    <string name="SFUI_UI_MEDIUM">sf-san-francisco-ui-text-medium-595f2d069082c.ttf</string>
    <string name="SFUI_DISPLAY_BOLD">sf-san-francisco-ui-display-bold-595f43924bb47.ttf</string>
    <string name="SFUI_UI_BOLD">sf-san-francisco-ui-text-bold-596345c6da901.ttf</string>
    <string name="SFUI_UI_LIGHT_ITALIC">sf-san-francisco-ui-text-light-italic-59634882b6080.ttf</string>
    <string name="SFUI_DISPLAY_HEAVY">sf-san-francisco-ui-display-heavy-597ae30aa7c86.ttf</string>
    <string name="AVENIR_FONT">Avenir Next.ttc</string>
    <string name="AVENIR_FONT_MED">AvenirNextLTPro-Medium.ttf</string>
    <string name="PROXIMA_LIGHT">ProximaNova-Light.ttf</string>
    <string name="HELVETICA_LIGHT">HelveticaNeue Light.ttf</string>
    <string name="HELVETICA_BOLD">Helvetica Neu Bold.ttf</string>

    <string name="search_text_splash">Search Thousands of African Songs</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="musika">Musika</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="forget_password_simple">Forgot Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_fb">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="we_will_never_post">We will never post anything on your behalf without your explict permission</string>
    <string name="sign_up_to_join">Sign up to join the biggest  Music Community in Africa</string>
    <string name="login_with_email">Login with Email</string>
    <string name="email_sign_up">Email Sign Up</string>
    <string name="transition_lets_start">Transition Name : Lets start</string>
    <string name="name">Name</string>
    <string name="please_type_full_name">Please type full name</string>
    <string name="please_type_phone_number">Please type phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="enter_playlist_name">Enter Playlist name</string>

    <string name="please_type_email">Please type email Id</string>
    <string name="please_type_password">Please type password</string>
    <string name="create_account">Create Account</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="please_enter_email">Please enter your email. We will send you an  email to change your password.</string>
    <string name="recover">Recover</string>
    <string name="explore">Explore</string>
    <string name="suggestion">Suggestion</string>
    <string name="library">Library</string>
    <string name="search">Search</string>
    <string name="suggested">Suggested</string>
    <string name="follow">Follow</string>
    <string name="top_song_africa">Top Songs in Africa</string>
    <string name="recent_played">Recently Played</string>
    <string name="downloads">Downloads</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="likes">Likes</string>
    <string name="search_for_song_artist">Search for songs, artists....</string>
    <string name="settings">Settings</string>
    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="like">Like</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="share">Share</string>
    <string name="go_to_album">Go to Album</string>
    <string name="go_to_artist">Go to Artist</string>
    <string name="delete_from_library">Delete from Library</string>
    <string name="close">Close</string>
    <string name="get_unlimited_text">Get unlimited downloads and remove ads</string>
    <string name="get_smsu">Get SMOOBOO premium today!</string>
    <string name="notification">Notification</string>
    <string name="socialize_with">Socialize With Smubu</string>
    <string name="sign_out_with">Sign out (Heba El Houjairy)</string>
    <string name="more">More</string>
    <string name="popular_song">Popular Songs</string>
    <string name="more_album">More Albums</string>
    <string name="smubu">Smubu</string>
    <string name="msg_name">Name is required</string>
    <string name="msg_first_name">First name is required</string>
    <string name="msg_last_name">Last name is required</string>
    <string name="msg_email">Email is required</string>
    <string name="msg_mobile">Mobile is required</string>
    <string name="msg_valid_email">Valid email id is required</string>
    <string name="msg_password">Password is required</string>
    <string name="msg_current_password">Current password is required</string>
    <string name="msg_new_password">New password is required</string>
    <string name="msg_confirm_password">Confirm password is required</string>
    <string name="change_new_confirm_not_match">New password and Confirm password are not same</string>
    <string name="change_current_new_match">Current password and New Password are same</string>
    <string name="msg_age">Age is required</string>
    <string name="no_internet_connection">Your internet connection appears to be offline</string>
    <string name="default_action">Action</string>
    <string name="msg_already_exist">Email Id is already exist</string>
    <string name="no_data_found">No Data Found</string>
    <string name="following">Following</string>
    <string name="unfollow">Unfollow</string>
    <string name="african_music_in_ur_hand">African music in your hands!</string>
    <string name="other_login_option">Other login options</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="discovor_more_artist">Discover more artists</string>
    <string name="discovor_more_albums">Discover more albums</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="latest_releases">Latest Releases</string>
    <string name="going_viral">Going viral</string>
    <string name="personal_dj">Personal Dj</string>
    <string name="genres">Genres</string>
    <string name="songs">Songs</string>
    <string name="enter_playlist_name_dialog">Enter playlist name</string>
    <string name="liked">Liked</string>

</resources>
