<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fragment_playlist_iv_back"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:src="@drawable/ic_red_back" />

        <com.musika.widget.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:padding="@dimen/_6sdp"
            android:id="@+id/fr_tv_play_list"
            android:text="@string/playlists"
            android:textColor="@color/btn_red"
            android:textSize="@dimen/_17sdp"
            app:font_type="@string/SFUI_Display_SemiBold" />

        <ImageButton
            android:id="@+id/new_playlist_addsong"
            android:src="@drawable/ic_playlist_add_red_24dp"
            android:background="@color/white"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginRight="@dimen/_18sdp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>




    <LinearLayout

        android:layout_marginTop="@dimen/_50sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_add_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

        <com.musika.widget.CustomTextView

            android:id="@+id/cancel_addsong"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_27sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/round_corner_red_bg_normal"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:transitionName="@string/transition_lets_start"
            app:font_type="@string/SFUI_Display_Regular"
            app:rd_cornerRadius="@dimen/_18sdp"
            app:rd_enable="true"
            app:rd_maskType="rectangle"
            app:rd_maxRippleRadius="@dimen/_18sdp"
            app:rd_padding="@dimen/_18sdp"
            app:rd_style="@style/Material.Drawable.Ripple.Touch" />



    </LinearLayout>
    <!--</com.musika.widget.NonFocusingScrollView>-->

</RelativeLayout>
</layout>