<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.musika.widget.CustomTextView
                android:id="@+id/row_home_song_tv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/top_song_africa"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sdp"
                android:singleLine="true"
                app:font_type="@string/SFUI_DISPLAY_HEAVY" />
           <LinearLayout
               android:visibility="gone"
               android:id="@+id/row_home_song_ll_more"
               android:gravity="center"
               android:layout_marginRight="@dimen/_8sdp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">

            <com.musika.widget.CustomTextView
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textColor="@color/new_more_color"
                android:singleLine="true"
                android:textSize="@dimen/_13sdp"
                app:font_type="@string/SFUI_Display_Regular" />

               <ImageView
                   android:tint="@color/black"
                   android:rotation="270"
                   android:src="@drawable/ic_arrow"
                   android:layout_width="@dimen/_12sdp"
                   android:layout_height="@dimen/_10sdp" />
           </LinearLayout>


        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/row_home_song_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp" />

    </LinearLayout>
</layout>