<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_change_password_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/outer_setting"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">


            <RelativeLayout
                android:id="@+id/act_download_iv_back"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_33sdp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:src="@drawable/ic_back_arrow"
                    android:tint="@color/white"/>
            </RelativeLayout>

            <!--<ImageView-->
                <!--android:id="@+id/act_download_iv_back"-->
                <!--android:layout_width="@dimen/_16sdp"-->
                <!--android:layout_height="@dimen/_16sdp"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_marginLeft="@dimen/_5sdp"-->
                <!--android:src="@drawable/ic_red_back" />-->

            <com.musika.widget.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:padding="@dimen/_6sdp"
                android:text="@string/change_password"
                android:textColor="@color/btn_red"
                android:textSize="@dimen/_17sdp"
                app:font_type="@string/SFUI_Display_SemiBold" />

        </RelativeLayout>


        <ScrollView
            android:id="@+id/fragment_change_password_sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/round_corner_white_more"
                    android:orientation="vertical">


                    <com.musika.widget.CustomEditText
                        android:id="@+id/act_ed_current_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:cursorVisible="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:hint="@string/current_password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingBottom="@dimen/_3sdp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_3sdp"
                        android:paddingTop="@dimen/_3sdp"
                        android:textColor="@color/font_change_password"
                        android:textColorHint="@color/new_hint_gray"
                        android:textCursorDrawable="@drawable/cursor_drawable"
                        android:textSize="@dimen/_12sdp"
                        app:font_type="@string/SFUI_Display_Medium" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/new_line" />

                    <com.musika.widget.CustomEditText
                        android:id="@+id/act_ed_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:hint="@string/new_password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingBottom="@dimen/_3sdp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_3sdp"
                        android:paddingTop="@dimen/_3sdp"
                        android:textColor="@color/font_change_password"
                        android:textColorHint="@color/new_hint_gray"
                        android:textCursorDrawable="@drawable/cursor_drawable"
                        android:textSize="@dimen/_12sdp"
                        app:font_type="@string/SFUI_Display_Medium" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/new_line" />

                    <com.musika.widget.CustomEditText
                        android:id="@+id/act_ed_confirm_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:hint="@string/confirm_new_password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingBottom="@dimen/_3sdp"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingRight="@dimen/_3sdp"
                        android:paddingTop="@dimen/_3sdp"
                        android:textColor="@color/font_change_password"
                        android:textColorHint="@color/new_hint_gray"
                        android:textCursorDrawable="@drawable/cursor_drawable"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold"
                        app:font_type="@string/SFUI_Display_Medium" />


                </LinearLayout>

                <com.musika.widget.CustomTextView
                    android:id="@+id/act_tv_save"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_29sdp"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/round_corner_red_bg_normal"
                    android:gravity="center"
                    android:text="@string/save_changes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:transitionName="@string/transition_lets_start"
                    app:font_type="@string/SFUI_DISPLAY_BOLD"
                    app:rd_cornerRadius="@dimen/_18sdp"
                    app:rd_enable="true"
                    app:rd_maskType="rectangle"
                    app:rd_maxRippleRadius="@dimen/_18sdp"
                    app:rd_padding="@dimen/_18sdp"
                    app:rd_style="@style/Material.Drawable.Ripple.Touch" />

                <com.musika.widget.CustomTextView
                    android:id="@+id/act_tv_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_29sdp"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/round_corner_white_bg_normal"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:transitionName="@string/transition_lets_start"
                    app:font_type="@string/SFUI_DISPLAY_BOLD"
                    app:rd_cornerRadius="@dimen/_18sdp"
                    app:rd_enable="true"
                    app:rd_maskType="rectangle"
                    app:rd_maxRippleRadius="@dimen/_18sdp"
                    app:rd_padding="@dimen/_18sdp"
                    app:rd_style="@style/Material.Drawable.Ripple.Touch" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>